--- a/src/css/header.css
+++ b/src/css/header.css
@@ -18,7 +18,7 @@ html.loaded #header {
 	float: left;
 	display: block;
 	width: 3.6rem;
-	height: 3.6rem;
+	height: 100%;
 	background-color: transparent;
 	background-position: center;
 	background-repeat: no-repeat;
