--- a/src/css/views/send.css
+++ b/src/css/views/send.css
@@ -7,7 +7,7 @@
 	left: 0;
 	top: 0;
 	width: 100%;
-	height: 7.5rem;
+	height: 7rem;
 	z-index: 50;
 	background: #111;
 }
@@ -85,11 +85,14 @@
 .view.send .balance {
 	position: absolute;
 	left: 0;
-	top: 7.8rem/* scoreboard height+margin */;
-	height: 3.5rem;
+	top: 7rem;
+	height: 2.5rem;
 	width: 100%;
 	z-index: 50;
 	background: #111;
+}
+.view.send.has-pending-balance .balance {
+	height: 3.9rem;
 }
 .view.send .balance-pending,
 .view.send .balance-total {
@@ -97,8 +100,8 @@
 	text-align: center;
 }
 .view.send .balance-total {
-	height: 2rem;
-	line-height: 2rem;
+	height: 2.5rem;
+	line-height: 2.2rem;
 	font-size: 1.2rem;
 }
 .view.send .balance-pending {
@@ -109,7 +112,7 @@
 	font-weight: 100;
 	opacity: .6;
 }
-.view.send .balance-pending.non-zero {
+.view.send.has-pending-balance .balance-pending {
 	display: block;
 }
 .view.send .balance-value {
@@ -157,8 +160,11 @@
 	top: 0;
 	z-index: 40;
 	width: 100%;
-	height: 11.5rem;
+	height: 10rem;
 	background: #111;
+}
+.view.send.has-pending-balance .scoreboard-and-balance {
+	height: 11.5rem;
 }
 .view.send .form {
 	position: absolute;
@@ -168,7 +174,10 @@
 	height: 100%;
 	overflow: auto;
 	box-sizing: border-box;
-	padding: 11.5rem 1rem 9rem 1rem;
+	padding: 10rem 1rem 9rem 1rem;
+}
+.view.send.has-pending-balance .form {
+	padding-top: 11.5rem;
 }
 .view.send .form-field,
 .view.send .form-label {
@@ -207,6 +216,9 @@
 .view.send .form-row--amount .form-field.has-1-actions {
 	padding-right: 7.6rem;
 }
+.view.send .form-row--feeRate .form-field.has-1-actions {
+	padding-right: 2rem;
+}
 .view.send .form-row--amount .currency-symbol {
 	position: absolute;
 	right: 4.6rem;
@@ -219,7 +231,7 @@
 }
 .view.send .form-field-action.select-all {
 	width: 4rem;
-	height: 1.6rem;
+	height: 100%;
 	line-height: 1.6rem;
 	text-align: center;
 	text-transform: lowercase;
@@ -249,6 +261,13 @@
 	min-height: 1.5rem;
 	padding-bottom: .2rem;
 }
+.view.send .form-row + .form-row.form-row--feeRate {
+	margin-top: 1.25rem;
+}
+.view.send .form-row + .form-row.form-row--autoBroadcastDoubleSpend,
+.view.send .form-row + .form-row.form-row--autoBroadcastDoubleSpendDelay {
+	margin-top: .5rem;
+}
 .view.send .form-row-type--checkbox .form-label {
 	height: 1.2rem;
 	opacity: .4;
@@ -275,9 +294,6 @@
 	line-height: 1.5rem;
 	padding-left: .8rem;
 }
-.view.send .form-row + .form-row {
-	margin-top: .8rem;
-}
 .view.send .auto-double-spend-timer {
 	position: absolute;
 	right: .9rem;
@@ -301,7 +317,8 @@
 	width: 75%;
 }
 .view.send input[name="feeRate"] {
-	width: 3.75rem;
+	width: 100%;
+	max-width: 3.75rem;
 }
 .view.send .form-row--feeRate .form-field-action {
 	width: 1.5rem;
