--- a/src/css/buttons.css
+++ b/src/css/buttons.css
@@ -3,7 +3,7 @@
 	display: inline;
 	height: auto;
 	cursor: pointer;
-	color: #111;
+	color: rgba(0,0,0,.8);
 	font-size: .9rem;
 	font-weight: 400;
 	background-color: #f7f7f7;
@@ -31,7 +31,7 @@
 	opacity: .3;
 }
 .button.disabled.touchstart {
-	color: #111;
+	color: rgba(0,0,0,.4);
 	background-color: #f7f7f7;
 	box-shadow: 0 .3rem .3rem 0 rgba(0,0,0,.14),
 				0 .45rem .15rem -.3rem rgba(0,0,0,.2),
