Removed ElectrumX server communication
Added web service API (esplora or mempool) to perform all coin-related functions

Can use default web service API or your own self-hosted instance

Dropped support for Litecoin network, can export private key

Added button to re-broadcast individual transaction in history view

Added button to copy raw transaction (hex) to clipboard in history view

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -59,3 +59,9 @@ html.configured .header-button.history {
 .header-button.debug {
 	float: right;
 }
+
+html.deprecated-network .header-button.receive,
+html.deprecated-network .header-button.send,
+html.deprecated-network .header-button.history {
+	display: none;
+}
