--- a/src/css/base.css
+++ b/src/css/base.css
@@ -90,7 +90,7 @@ html.loaded #view {
 	display: none;
 	width: 100%;
 	height: 100%;
-	background: rgba(0, 0, 0, 0.2);
+	background: rgba(0, 0, 0, 0.6);
 }
 #message.visible {
 	display: table;
@@ -109,9 +109,10 @@ html.loaded #view {
 	color: #f7f7f7;
 	text-align: left;
 	word-break: break-word;
-	background: rgba(0, 0, 0, .9);
+	background: #222;
+	border: .2rem solid rgba(255,255,255,.1);
 	border-radius: .5rem;
-	padding: 1rem;
+	padding: .5rem;
 }
 #cover {
 	position: fixed;
@@ -139,9 +140,10 @@ html.loaded #view {
 }
 #cover-text {
 	position: relative;
-	top: -1rem;
+	top: 0;
 	font-weight: 100;
 	font-style: italic;
+	font-size: 1.2rem;
 	text-align: center;
 }
 html.loaded #cover {
@@ -149,14 +151,6 @@ html.loaded #cover {
 }
 html.loaded.busy #cover {
 	display: flex;
-}
-html.loaded.busy #cover-image {
-	width: 160px;
-	height: 160px;
-	background-size: 80px;
-	background-image: url('../images/busy.gif');
-	background-color: #fff;
-	box-shadow: 0 0 8px rgba(0,0,0,.4);
 }
 html.keyboard-visible .secondary-controls {
 	display: none;
