--- a/src/css/forms.css
+++ b/src/css/forms.css
@@ -17,6 +17,12 @@
 	font-size: .9rem;
 	margin-bottom: .4rem;
 }
+.form-notes {
+	display: block;
+	font-size: .9rem;
+	font-weight: 100;
+	margin-top: .5rem;
+}
 .form-field {
 	position: relative;
 	font-size: .9rem;
@@ -92,6 +98,7 @@
 	right: 0;
 	width: auto;
 	height: 100%;
+	max-height: 1.7rem;
 	margin-top: 0;
 }
 .form-field-action {
@@ -125,6 +132,12 @@
 .form-field-action.visibility {
 	background-size: 1.5rem;
 	background-image: url('../images/visibility.svg');
+}
+.form-field-action.undo {
+	background-image: url('../images/undo.svg');
+}
+.form-field-action.test {
+	background-image: url('../images/test.svg');
 }
 .form-description {
 	font-size: .9rem;
