--- a/src/css/views/history.css
+++ b/src/css/views/history.css
@@ -36,19 +36,59 @@
 .view.history td:first-child {
 	text-align: left;
 }
+.view.history td:first-child {
+	font-family: monospace;
+	font-size: 1.1rem;
+}
+.view.history th:nth-last-child(3),
+.view.history td:nth-last-child(3),
+.view.history th:nth-last-child(2),
+.view.history td:nth-last-child(2),
 .view.history th:last-child,
 .view.history td:last-child {
-	text-align: right;
+	text-align: center;
+	padding: 0;
 }
-.view.history .refresh {
+.view.history .history-item .tx-status {
+	display: inline-block;
+	vertical-align: middle;
+	width: 1.2rem;
+	height: 1.2rem;
+	background-size: 1.2rem;
+	background-position: center;
+	background-repeat: no-repeat;
+}
+.view.history .history-item .tx-status.pending { background-image: url('../images/pending.svg') }
+.view.history .history-item .tx-status.invalid { background-image: url('../images/invalid.svg') }
+.view.history .history-item .tx-status.confirmed { background-image: url('../images/confirmed.svg') }
+.view.history .history-item .button {
+	position: relative;
 	display: inline-block;
 	vertical-align: middle;
 	width: 1.5rem;
 	height: 1.5rem;
-	border-radius: .6rem;
-	opacity: .7;
-	background-image: url(../images/cycle.svg);
+	border-radius: 50%;
+	padding: 0;
+}
+.view.history .history-item .button:before {
+	position: absolute;
+	left: 0;
+	top: 0;
+	content: ' ';
+	width: 100%;
+	height: 100%;
 	background-size: .9rem;
 	background-repeat: no-repeat;
-	background-position: 50%;
+	background-position: center;
+	background-color: transparent;
+}
+.view.history .history-item .button.broadcast:before {
+	background-image: url(../images/send.svg);
+}
+.view.history .history-item .button.copy-to-clipboard:before {
+	background-image: url(../images/copy.svg);
+}
+.view.history .history-item .button.refresh:before {
+	opacity: .7;
+	background-image: url(../images/cycle.svg);
 }
