Styling, instructional text, calculate fee if missing
Use cache: false option for jQuery ajax requests

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -6,6 +6,7 @@ html, body {
 	font-family: 'OpenSans', sans-serif, arial;
 	background: #fff;
 	overflow: hidden;
+	box-sizing: border-box;
 	padding: 0;
 	margin: 0;
 }
