--- a/src/css/views/debug.css
+++ b/src/css/views/debug.css
@@ -1,9 +1,20 @@
-.view-debug pre b {
+.view.debug {
+	padding-bottom: 5.4rem;
+}
+.view.debug pre {
+	font-size: 1.1rem;
+	line-height: 1.1rem;
+	box-sizing: border-box;
+	background: #222;
+	padding: .5rem;
+	margin: 0;
+}
+.view.debug pre b {
 	display: inline-block;
 	vertical-align: top;
 	width: 100%;
 	margin-bottom: .5rem;
 }
-.view-debug pre b + b {
+.view.debug pre b + b {
 	margin-top: 1.5rem;
 }
