--- a/src/css/views/history.css
+++ b/src/css/views/history.css
@@ -80,7 +80,7 @@
 	content: ' ';
 	width: 100%;
 	height: 100%;
-	background-size: .9rem;
+	background-size: 60%;
 	background-repeat: no-repeat;
 	background-position: center;
 	background-color: transparent;
