--- a/src/css/views/send.css
+++ b/src/css/views/send.css
@@ -134,7 +134,7 @@
 	border-radius: .6rem;
 	opacity: .7;
 	background-image: url(../images/cycle.svg);
-	background-size: .9rem;
+	background-size: 60%;;
 	background-repeat: no-repeat;
 	background-position: 50%;
 }
@@ -330,6 +330,9 @@
 	height: 1.5rem;
 	border-radius: 50%;
 	padding: 0;
+}
+.view.send .form-field-action.cycle {
+	background-size: 60%;
 }
 
 	/*  UI keyboard is visible  */
