New configuration to toggle use of fiat currency, default state disabled
Changed default web service type to esplora

New "Refresh History" button in history view

--- a/src/css/forms.css
+++ b/src/css/forms.css
@@ -147,31 +147,31 @@
 .form-switch {
 	position: relative;
 	display: inline-block;
-	width: 60px;
-	height: 34px;
+	width: 3rem;
+	height: 1.6rem;
 }
 .form-switch input {
 	display:none;
 }
 .form-switch-slider {
 	position: absolute;
-	cursor: pointer;
-	top: 0;
+	content: ' ';
+	height: 100%;
 	left: 0;
-	right: 0;
+	width: 100%;
 	bottom: 0;
-	background-color: #ccc;
+	background-color: #fff;
 	-webkit-transition: .4s;
 	transition: .4s;
-	border-radius: 34px;
+	border-radius: 2rem;
 }
 .form-switch-slider:before {
 	position: absolute;
-	content: '';
-	height: 26px;
-	width: 26px;
-	left: 4px;
-	bottom: 4px;
+	content: ' ';
+	height: 1.2rem;
+	width: 1.2rem;
+	left: .2rem;
+	bottom: .2rem;
 	background-color: #fff;
 	-webkit-transition: .4s;
 	transition: .4s;
@@ -181,9 +181,9 @@ input:checked + .form-switch-slider {
 	background-color: #2196F3;
 }
 input:focus + .form-switch-slider {
-	box-shadow: 0 0 1px #2196F3;
+	box-shadow: 0 0 .1rem #2196F3;
 }
 input:checked + .form-switch-slider:before {
-	-webkit-transform: translateX(26px);
-	transform: translateX(26px);
+	-webkit-transform: translateX(1.4rem);
+	transform: translateX(1.4rem);
 }
