--- a/src/css/views/history.css
+++ b/src/css/views/history.css
@@ -52,7 +52,8 @@
 	text-align: center;
 	padding: 0;
 }
-.view.history .history-item .tx-status {
+.view.history .history-item .tx-status,
+.view.history .history-item .tx-type {
 	display: inline-block;
 	vertical-align: middle;
 	width: 1.2rem;
@@ -61,9 +62,20 @@
 	background-position: center;
 	background-repeat: no-repeat;
 }
+.view.history .history-item .tx-type {
+	opacity: .8;
+}
 .view.history .history-item .tx-status.pending { background-image: url('../images/pending.svg') }
 .view.history .history-item .tx-status.invalid { background-image: url('../images/invalid.svg') }
 .view.history .history-item .tx-status.confirmed { background-image: url('../images/confirmed.svg') }
+.view.history .history-item .tx-type.payment { background-image: url('../images/tx-type-payment.svg') }
+.view.history .history-item .tx-type.double-spend { background-image: url('../images/tx-type-double-spend.svg') }
+.view.history .history-item .tx-label {
+	display: inline-block;
+	vertical-align: top;
+	width: 100%;
+	height: 100%;
+}
 .view.history .history-item .button {
 	position: relative;
 	display: inline-block;
